--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,16 @@ buildscript {
     repositories {
         jcenter()
     }
-    
+
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.github.jengelman.gradle.plugins:shadow:5.2.0"
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'application'
+apply plugin: "com.github.johnrengelman.shadow"
 
 group 'com.alanviana'
 version '0.0.1'
@@ -35,4 +37,12 @@ dependencies {
     implementation "io.ktor:ktor-server-core:$ktor_version"
     implementation "io.ktor:ktor-gson:$ktor_version"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
+}
+
+task stage(dependsOn: ['clean', 'shadowJar'])
+
+shadowJar {
+    baseName = 'generator-uuid-api'
+    classifier = null
+    version = null
 }
